# Exercises-answer-in-C-prime-plus-6th-edition

./: CMakeLists.txt  LICENSE  README.md
coding_exercise/chapter13/1/: cd.cpp  cd.h  main.cpp
coding_exercise/chapter13/2/: cd.cpp  cd.h
coding_exercise/chapter13/3/: dma.cpp  dma.h  main.cpp
coding_exercise/chapter3/1-Inch2Foot/Inch2Foot/: Inch2Foot.cpp
review_exercise/7.12/: 4.cpp  8.cpp
